# ASL-SBS-SES

./: .gitignore  README.md  app.py  convert_to_tflite.py  download_dataset.bash  main.py  predict.py  pyproject.toml  quanitize.py  train.py
src/: config.py  data.py  model.py  utils.py
